# hashgraph

./: .gitignore  .skaroignore  BOOKLET_RU.md  Dockerfile  README.md  docker-compose.yaml  payload.json  pyproject.toml
.skaro/: config.yaml  constitution.md  state.yaml
configs/: node.demo.yaml  node.example.yaml
data/: demo-node.db  demo-node.db-shm  demo-node.db-wal  event_catalog.json  node1.db
docs/: WORKFLOW.md  constitution.md  event-classification.md
mdrj/: __init__.py  agent_relay.py  api.py  auth.py  checkpoint.py  cli.py  config.py  consensus.py  discovery.py  event_catalog.py  gossip.py  linux_ingest.py  metrics.py  models.py  node.py  notifier.py  prioritization.py  prometheus_extras.py  simulation.py  storage.py  utils.py  vectorclock.py
mdrj_dag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: demo_partition.sh  demo_reconcile.sh  demo_start_cluster.sh
tests/: test_api_auth.py  test_auth.py  test_catalog_loader.py  test_checkpoint.py  test_collection_policy.py  test_collectors.py  test_consensus.py  test_consensus_digest_finality.py  test_consensus_legacy.py  test_consensus_rounds.py  test_durability_layers.py  test_event_catalog.py  test_event_emit_contract.py  test_gossip_integration.py  test_headless.py  test_heartbeat.py  test_host_lifecycle.py  test_hourly_status.py  test_linux_ingest.py  test_merge_partition.py  test_metrics_prometheus.py  test_metrics_resource.py  test_models.py  test_notifier.py  test_peer_approval.py  test_peer_registry.py  test_prioritization.py  test_recompute_debounce.py  test_retention.py  (+3 more)
(+117 files in other folders)
