[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdrj-dag"
version = "0.1.0"
description = "Minimal distributed security event DAG with gossip and virtual voting"
readme = "README.md"
authors = [{name = "MDRJ Team"}]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiohttp>=3.9",
  "typer>=0.9",
  "rich>=13.0",
  "shellingham>=1.5",
  "PyYAML>=6.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-aiohttp>=1.0"]

[project.scripts]
mdrj = "mdrj.cli:main"

[tool.setuptools]
packages = ["mdrj", "mdrj.collectors"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
